# SpectralDefocusCam

./: .gitignore  LICENSE  Makefile  README.md  _interactive.py  _interactive_workspace.py  _precomp_data.py  environment.yml  evaluation.py  image_capture_script.py  inference.py  iterative_reconstruction_demo.ipynb  iterative_reconstruction_demo_simulated.ipynb  learned_reconstruction_demo.ipynb  learned_reconstruction_demo_lri.ipynb  main.py  precompute_data_lri.ipynb  precompute_data_lsi.ipynb  preprocess.py  pyproject.toml  reconstruction.py  spectral_defocuscam_tutorial_iterative.ipynb  spectral_defocuscam_tutorial_learning.ipynb  spectral_diffuser_defocuscam_tutorial_iterative.ipynb  train.py  workspace.py
config_files/: TEMPLATE_inference.yml  TEMPLATE_training.yml
configs/: TEMPLATE_evaluation.yml  TEMPLATE_inference.yml  TEMPLATE_training.yml
data_utils/: dataset.py  precomp_dataset.py  preprocess_data.py
dataset/: dataset.py  precomp_dataset.py  preprocess_data.py
defocuscam/: evaluation.py  hparam_tuning_fista.py  inference.py  main.py  preprocess.py  train.py
dev_notebooks/: _calibration_matrix_interactive.py  _interactive_workspace.py  _pre_compute_data_workspace.py  fista_recon_experimental.ipynb  forward_test_with_images.ipynb  psf_calibration.ipynb
models/: ensemble.py  forward.py  get_model.py  models.py
models_iterative/: fista_spectral_cupy.py  fista_spectral_cupy_batch.py
models_learning/: babyunet.py  forward.py  models.py  spectral_model.py  unet.py  unet3d.py
notebooks/: compute_metrics.ipynb  deepUnlearnedRecon.ipynb  (+6 more)
(+329 files in other folders)
